[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { git = "https://github.com/bluealloy/revm", branch = "main", default-features = false, features = [ "serde", "ethersdb", "serde-json", "std" ] }

serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }